== 0.1 (28.09.2012):
- Initial release.

== 0.1.1 (01.10.2012):
- Fixed infinite loop with -O2.

== 0.1.2 (25.10.2012):
- Fixed controls names sometimes not displayed on 32bit systems.
- Added 1/2/3/4/5 as synonym for F1/F2/F3/F4/F5 (by @arandomuser).
- Properly removing observers from notification center.

== 0.1.3 (24.11.2012):
- Fixed controls sometimes displaying wrong values at start.
- Fixed Monitor controls changing monitored sink values.
- Using @protocol to avoid "multiple definitions" warnings.
- Fixed single channel controls being printed too much to the left.
- Fixed a corner case in disappearing controls removal.
- Fixed some setFilter corner cases causing screen corruptions.
- Fixed hidden widgets getting reprinted when changed outside the app.

== 0.2 (05.02.2013):
- Added ability to filter out PA internals/Monitors.
- Properly dealing with non-existing/lost connections.
- Fixed m/j/k crash when used on empty page.
- Fixed possible mix-up of SINK and SINK_INPUT controls.
- Fixed hidden controls sometimes not properly removed when gone.
- Added ability to get/set card-wise options (e.g. profiles).

== 0.3 (24.02.2013):
- Fixed crash when trying to go inside on SETTINGS tab.
- Fixed a small screen corruption introduced in 0.2.
- Added ability to get/set control-wise options (e.g. ports).

== 0.4 (17.05.2013):
- Adjusted Makefile to work better on different distros.
- Fixed some possible memory leaks.
- Added a test suite.
- Fixed screen corruptions happening on terminal resizes.
- Fixed settings sometimes disappearing after card profile change.

== 0.5:
- Fixed INPUTS filtered as OUTPUTS and vice versa.